--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: DH Practicum 2023
+subtitle: An online diary of my DH journey through this course
 ---
