--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: DH Practicum 2023
-subtitle: An online diary of my DH journey through this course
+title: Vanessa Barcelos
+subtitle: University of Miami Researcher and Instructor
 ---
