--- a/publications.html
+++ b/publications.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
-<html>
-  <body>
-  
-<h1>Publications</h1>
-<h2>Conferences</h2>
+<html lang="en">
+<head>
+<title>Page Title</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/* Style the body */
+body {
+  font-family: Arial;
+  margin: 0;
+}
+
+/* Header/Logo Title */
+.header {
+  padding: 60px;
+  text-align: center;
+  background: #D0ACEE;
+  color: white;
+  font-size: 30px;
+}
+
+/* Page Content */
+.content {padding:20px;}
+</style>
+</head>
+<body>
+
+<div class="header">
+  <h1>Publications</h1>
+  <p>Publishing since scientific initiation to Ph.D. research</p>
+</div>
+
+<div class="content">
+  <h2>Conferences</h2>
 <p>Barcelos, Vanessa R. “Reading women's demonic grounds through a black queer touch in Naudline Pierre's Closed Quarters. In: UCLA Q-Grad: Queer Graduate Student Research Conference, UCLA, Los Angeles, CA, USA (August 2022).</p>
 
 <p>Barcelos, Vanessa R. “Making up witches: witchcraft and political conversations in Reginald Scot’s dedicatory epistles in Discoverie of Witchcraft”. In: Ninth Annual Symposium on Medieval and Renaissance Studies, University of Saint Louis, Missouri, USA (June 2022).</p>
@@ -26,5 +55,9 @@
 <p>Brasil, Jaciara B.; Barcelos, Vanessa R. Text-image relations on the English teaching website Britlit. 2013.</p>
 
 <p>Barcelos, Vanessa R.; Brasil, Jaciara B. Text-image relations in didactic materials for EFL, 2012.</p>
-  </body>
+
+</div>
+
+</body>
 </html>
+
